redo db :(
